[package]
name = "win-keylogger-rs"
version = "0.1.1"
authors = ["Thomas Lienbacher <lienbacher.tom@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
os_info = "*"
hostname = "*"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winnt", "processthreadsapi", "psapi", "winnls"] }

[profile.release]
lto = true
opt-level = 'z'
overflow-checks = false
debug = false
panic = "abort"
